@@ -1,5 +1,4 @@
 package com.ruanbianca.redesocial;
-
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
